change response to univerProgramTree in LikedPrograms, GetProgramsByField
