# api/handler/program_handler.go
@@ -31,8 +31,8 @@ func (p *ProgramHandler) GetProgramsByFaculty(c *gin.Context) {
 }
 
 // GetProgramsByField
-// @Summary Получить все образовательные программы по направлению подготовки
-// @Description Возвращает список программ по направлению, с возможностью сортировки и фильтрации по предметам, университету и поисковому запросу
+// @Summary Получить все образовательные программы по направлению подготовки, сгруппированные по университетам
+// @Description Возвращает список программ по направлению, сгруппированные по университету, с возможностью фильтрации по предметам, университету и поисковому запросу
 // @Tags Программы по направлению подготовки
 // @Accept json
 // @Produce json
@@ -40,12 +40,10 @@ func (p *ProgramHandler) GetProgramsByFaculty(c *gin.Context) {
 // @Param degree query []string false "Названия университетов (например: Университет Иннополис)"
 // @Param subject query []string false "Предметы ЕГЭ (например: Русский язык, Математика)"
 // @Param search query string false "Поиск по названию программы (например: Программная инженерия)"
-// @Param sort query string false "Поле сортировки программ (university - по популярности университета), по умолчанию по убыванию популярности программы."
-// @Param order query string false "Порядок сортировки (asc или desc)"
-// @Success 200 {object} []dto.ProgramResponse
+// @Success 200 {object} []dto.UniverProgramTree
 // @Failure 400 {object} errs.AppError "Некорректные параметры запроса"
 // @Failure 500 {object} errs.AppError "Внутренняя ошибка сервера"
-// @Router /university/{id}/programs/by-faculty [get]
+// @Router /field/{id}/programs [get]
 func (p *ProgramHandler) GetProgramsByField(c *gin.Context) {
 	var queryParams dto.ProgramsByFieldQueryParams
 	if err := c.ShouldBindQuery(&queryParams); err != nil {
